# capstone-rl-trading

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  RESEARCH_LOG.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: README.md  exp003_config.yaml  exp004_config.yaml  exp005_config.yaml  exp006_config.yaml  exp007_config.yaml  exp009a_config.yaml  exp009c_config.yaml  exp012_config.yaml  exp013a_config.yaml  exp014a_config.yaml  exp014a_v2_config.yaml  exp014b_config.yaml  exp014b_v2_config.yaml  exp016_final_config.yaml  exp030_stabilization_config.yaml  exp031_bc_warmstart_config.yaml  exp032b_asym_config.yaml  exp032b_dsr_config.yaml  exp032b_pt_config.yaml  exp032b_sym_config.yaml  exp033_asym_config.yaml  exp033_dsr_config.yaml  exp033_pt_config.yaml  exp033_sym_config.yaml  experiment_config.yaml  optuna_coef_config.yaml
docs/: ENV_HISTORY.md  FORMULAS.md  MDP.md  PAPER_OUTLINE.md  PROJECT_GOAL.md  RELATED_WORK.md  RESULTS_SUMMARY.md  learning list.md
experiments/: README.md  exp032a_done.flag  exp032b_done.flag  exp032b_summary.csv  exp033_done.flag  exp033_summary.csv  exp034_done.flag  exp034_summary.csv  exp035_summary.csv
live_trading/: README.md  bot.py  config.yaml  exchange.py  formula.py  state_tracker.py
notebooks/: 01_data_exploration.ipynb  02_baseline_comparison.ipynb  03_ppo_training.ipynb  04_behavior_analysis.ipynb  05_coef_analysis.ipynb  06_final_evaluation.ipynb
paper/: LICENSE  main.tex  main_ko.tex  reading_guide.html
reports/: README.md  WEEKLY_TEMPLATE.md  exp032b_analysis_final.md  (+4 more)
(+403 files in other folders)
