[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-rl-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0.2",
    "optuna>=3.6",
    "numpy<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
